<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.PaymentPluginActivity">

            <include
                android:id="@+id/back_card"
                layout="@layout/back_card_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <include
                android:id="@+id/front_card"
                layout="@layout/front_card_layout"
                app:layout_constraintBottom_toBottomOf="@id/back_card"
                app:layout_constraintEnd_toEndOf="@id/back_card"
                app:layout_constraintStart_toStartOf="@id/back_card"
                app:layout_constraintTop_toTopOf="@id/back_card"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/checkout"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/front_card" />

            <TextView
                android:id="@+id/holder_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/holder_name"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/holder_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holder_name_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/holder_name_optional"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_num_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holder_name_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:digits="0123456789 "
                    android:drawableEnd="@drawable/ic_baseline_credit_card_24"
                    android:inputType="number"
                    android:maxLength="19"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textDirection="ltr"
                    android:textSize="14sp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/card_num"
                     />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_num_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:inputType="number"
                    android:longClickable="false"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:hint="@string/amount"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_month_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toStartOf="@id/expiry_year_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:hint="@string/month" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_year_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/year"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/expiry_month_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expiry_month_input"
                app:layout_constraintTop_toTopOf="@+id/expiry_month_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cvv_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expiry_month_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_input_selector"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:hint="@string/cvv" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/pay_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@drawable/payment_white_corner_btn"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/pay1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvv_input"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>